--- a/addons/repl/plugin.cfg
+++ b/addons/repl/plugin.cfg
@@ -2,7 +2,7 @@
 
 name="REPL"
 description="GDScript read-eval-print loop.
-Interactive toplevel in the editor to experiment with GDScript, fast!"
+Interactive toplevel/console in the editor to experiment with GDScript, fast!"
 author="Sylvain Beucler <beuc@beuc.net>"
 version="1.0.1"
 script="plugin.gd"
